force-app/main/default/objects/Contract/fields/ActiveContract__c.field-meta.xml
<CustomField>
    <fullName>ActiveContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Active version of this contract; this field is normally populated when a contract has been superseded or replaced by another version.</inlineHelpText>
    <label>Active Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Previous Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>