force-app/main/default/objects/Contract/fields/Addendum_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Sent_Date__c</fullName>
    <description>Filled when the customer received the project specific disclosure form.</description>
    <inlineHelpText>Filled when the customer received the project specific disclosure form.</inlineHelpText>
    <label>Addendum Sent Date</label>
    <type>Date</type>
</CustomField>