force-app/main/default/objects/Contract/fields/Anchor_Acquisition_Fee__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Acquisition_Fee__c</fullName>
    <inlineHelpText>Contracted $ / W for Anchor customers. Entered manually by CSBD.</inlineHelpText>
    <label>XXAnchor Acquisition Fee</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>