force-app/main/default/objects/Contract/fields/Assignment_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment Agreement</label>
    <lookupFilter>
        
            <active>true</active>
        
            <errorMessage>Assignment agreement must be a contract with record type = Assignment Agreement</errorMessage>
        
            <filterItems>
            
                <field>Contract.RecordTypeId</field>
            
                <operation>equals</operation>
            
                <value>Assignment Agreement</value>
            
            </filterItems>
        
            <isOptional>false</isOptional>
        
        </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Customer Assignments (Contracts)</relationshipLabel>
    <relationshipName>CustomerAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>