force-app/main/default/objects/Contract/fields/Assignment_Agreement_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Agreement_Template_Id__c</fullName>
    <formula>BLANKVALUE
(
BlueWave_Entity__r.Assignment_Agreement_Template__c,
Account.Assignment_Agreement_Template__c
)</formula>
    <label>Assignment Agreement Template Id</label>
    <type>Text</type>
</CustomField>