force-app/main/default/objects/Contract/fields/Assignment_Cutoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Cutoff_Date__c</fullName>
    <inlineHelpText>Date specified in the Customer Assignment flow as the date on or before which Opportunities need to be countersigned and SOs need to effective to be included in the AA</inlineHelpText>
    <label>Assignment Cutoff Date</label>
    <type>Date</type>
</CustomField>