force-app/main/default/objects/Contract/fields/BlueWave_Entity__c.field-meta.xml
<CustomField>
    <fullName>BlueWave_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Client entity named and executed in contract. Manually entered by CDBD at contract execution.</inlineHelpText>
    <label>Client Entity</label>
    <referenceTo>Entity__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>