force-app/main/default/objects/Contract/fields/BlueWave_Entity_Involved__c.field-meta.xml
<CustomField>
    <fullName>BlueWave_Entity_Involved__c</fullName>
    <label>Perch Entity(s) Involved</label>
    <length>150</length>
    <type>Text</type>
</CustomField>