force-app/main/default/objects/Contract/fields/BW_Company_Entity__c.field-meta.xml
<CustomField>
    <fullName>BW_Company_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Perch entity named and executed in contract (BWC, BFG, BCS Customer Mgmt, or BCS Customer Acq). Manually entered by CSBD at contract execution.</inlineHelpText>
    <label>Perch Entity</label>
    <referenceTo>Entity__c</referenceTo>
    <relationshipLabel>Contracts (BW Company Entity)</relationshipLabel>
    <relationshipName>BW_Company_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>