force-app/main/default/objects/Contract/fields/Committed_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Committed_Utilization__c</fullName>
    <inlineHelpText>Percentage below which the adjustment mechanism would be triggered; if above, no adjustment necessary.</inlineHelpText>
    <label>Utilization Adjustment Trigger Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>