force-app/main/default/objects/Contract/fields/Committed_Utilization_Remediation__c.field-meta.xml
<CustomField>
    <fullName>Committed_Utilization_Remediation__c</fullName>
    <inlineHelpText>Details, formula, exceptions methodology for calculating fees.</inlineHelpText>
    <label>Utilization Adjustment Methodology</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>