force-app/main/default/objects/Contract/fields/Conga_Signed_Template__c.field-meta.xml
<CustomField>
    <fullName>Conga_Signed_Template__c</fullName>
    <description>Same as Conga_Template__c, but with &quot;Signed&quot; in the file name</description>
    <formula>IF(
ISPICKVAL(Contract_Type__c,&quot;Generic&quot;)
,

&quot;[Terms and Conditions (Signed)]&quot;&amp;Product__r.Generic_Terms_Conga_Template__c
,

IF( 
Generate_Disclosure_Form__c=true
,

&quot;[Community Solar Agreement (Signed)]&quot;&amp;Product__r.Project_Specific_Conga_Template__c&amp;
IF(ISBLANK(Product__r.Disclosure_Form_Conga_Template__c),&quot;&quot;,&quot;,&quot;&amp;&quot;[Solar Disclosure Form (Signed)]&quot;&amp;Product__r.Disclosure_Form_Conga_Template__c)
,

&quot;[Community Solar Agreement (Signed)]&quot;&amp;Product__r.Project_Specific_Conga_Template__c

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Signed Template</label>
    <type>Text</type>
</CustomField>