force-app/main/default/objects/Contract/fields/Conga_Template_ID_Countersigned__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_ID_Countersigned__c</fullName>
    <formula>BLANKVALUE( Override_Countersign_Template_Id__c, 
IF(
 ISPICKVAL(Contract_Type__c,&quot;Generic&quot;),

&quot;[Terms and Conditions (Countersigned)]&quot;&amp;Product__r.Generic_Terms_Template_Countersigned__c,

IF( 
Generate_Disclosure_Form__c=true
,

&quot;[Community Solar Agreement (Countersigned)]&quot;&amp;Product__r.Project_Specific_Template_Countersigned__c&amp;
IF(ISBLANK(Product__r.Disclosure_Form_Conga_Template__c),&quot;&quot;,&quot;,&quot;&amp;&quot;[Solar Disclosure Form (Countersigned)]&quot;&amp;Product__r.Disclosure_Template_Countersigned__c)
,

&quot;[Community Solar Agreement (Countersigned)]&quot;&amp;Product__r.Project_Specific_Template_Countersigned__c

)
))</formula>
    <label>Conga Template ID (Countersigned)</label>
    <type>Text</type>
</CustomField>