force-app/main/default/objects/Contract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anchor Customer Contract</fullName>
            </value>
            <value>
                <fullName>BPD Scout Agreement</fullName>
            </value>
            <value>
                <fullName>Client Service Agreement</fullName>
            </value>
            <value>
                <fullName>Consumer Disclosure Form</fullName>
            </value>
            <value>
                <fullName>Customer Assignment</fullName>
            </value>
            <value>
                <fullName>Customer Contract Template</fullName>
            </value>
            <value>
                <fullName>Engineering, Procurement and Construction Contract (EPC)</fullName>
            </value>
            <value>
                <fullName>Financing Agreement</fullName>
            </value>
            <value>
                <fullName>Lease Option Agreement</fullName>
            </value>
            <value>
                <fullName>Membership Interest Purchase Agreement (MIPA) and Ancillary Documents</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>Sales Partner Agreement</fullName>
            </value>
            <value>
                <fullName>Small-Offtake Customer Contract</fullName>
            </value>
            <value>
                <fullName>Vendor Agreement</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>Project Specific</fullName>
            </value>
            <value>
                <fullName>Client Acquired Customer Assignment</fullName>
            </value>
            <value>
                <fullName>Lease Agreement</fullName>
                <isActive>false</isActive>
                <label>Lease Agreement</label>
            </value>
            <value>
                <fullName>Loan Origination and Servicing Agreement</fullName>
                <isActive>false</isActive>
                <label>Loan Origination and Servicing Agreement</label>
            </value>
            <value>
                <fullName>Membership Interest Purchase Agreement (MIPA)</fullName>
                <isActive>false</isActive>
                <label>Membership Interest Purchase Agreement (MIPA)</label>
            </value>
            <value>
                <fullName>Partner MSA</fullName>
                <isActive>false</isActive>
                <label>Partner MSA</label>
            </value>
            <value>
                <fullName>Partner SOW</fullName>
                <isActive>false</isActive>
                <label>Partner SOW</label>
            </value>
            <value>
                <fullName>Partner SSA</fullName>
                <isActive>false</isActive>
                <label>Partner SSA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>