force-app/main/default/objects/Contract/fields/CS_Services__c.field-meta.xml
<CustomField>
    <fullName>CS_Services__c</fullName>
    <inlineHelpText>Detailed description of Perch&apos;s responsibilities as a servicer</inlineHelpText>
    <label>CS Services</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>