force-app/main/default/objects/Contract/fields/Customer_Acquisition_Fee__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acquisition_Fee__c</fullName>
    <inlineHelpText>Contracted $ / W for Small Offtake customers. Manually entered by CSBD at contract execution.</inlineHelpText>
    <label>XXSmall Offtake Acquisition Fee</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>