force-app/main/default/objects/Contract/fields/Customer_Acquisition_Invoicing_Detail__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acquisition_Invoicing_Detail__c</fullName>
    <inlineHelpText>Terms at which customer acquisition fee is paid</inlineHelpText>
    <label>XXCustomer Acquisition Invoicing Detail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>