force-app/main/default/objects/Contract/fields/Customer_Acquisition_Invoicing_Timing__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acquisition_Invoicing_Timing__c</fullName>
    <label>XXCustomer Acquisition Invoicing Timing</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Monthly</fullName>
                
                
                    <label>Monthly</label>
                
                </value>
            
                <value>
                
                    <fullName>Quarterly</fullName>
                
                
                    <label>Quarterly</label>
                
                </value>
            
                <value>
                
                    <fullName>Annual</fullName>
                
                
                    <label>Annual</label>
                
                </value>
            
                <value>
                
                    <fullName>One-Time</fullName>
                
                
                    <label>One-Time</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>