force-app/main/default/objects/Contract/fields/Customer_Billing_Communications__c.field-meta.xml
<CustomField>
    <fullName>Customer_Billing_Communications__c</fullName>
    <inlineHelpText>Required customer communications, see detail field for more specifics</inlineHelpText>
    <label>Customer Billing Communications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly Statement</fullName>
            </value>
            <value>
                <fullName>Payment Receipt</fullName>
            </value>
            <value>
                <fullName>Project Assignment</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Schedule Z Filing</fullName>
            </value>
            <value>
                <fullName>Upcoming Bill</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Autopay Sign-Up</fullName>
            </value>
            <value>
                <fullName>Other, see detail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>