force-app/main/default/objects/Contract/fields/Customer_Billing_Communications_Detail__c.field-meta.xml
<CustomField>
    <fullName>Customer_Billing_Communications_Detail__c</fullName>
    <label>Customer Billing Communications Detail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>