force-app/main/default/objects/Contract/fields/Customer_Communication_Branding__c.field-meta.xml
<CustomField>
    <fullName>Customer_Communication_Branding__c</fullName>
    <label>Customer Communication Branding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BlueWave</fullName>
            </value>
            <value>
                <fullName>Cobranding with Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>