force-app/main/default/objects/Contract/fields/Customer_FICO_Detail__c.field-meta.xml
<CustomField>
    <fullName>Customer_FICO_Detail__c</fullName>
    <label>Customer FICO Detail</label>
    <type>TextArea</type>
</CustomField>