force-app/main/default/objects/Contract/fields/Customer_FICO_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Customer_FICO_Minimum__c</fullName>
    <inlineHelpText>Minimum Customer FICO threshold, see detail field for more specifics</inlineHelpText>
    <label>Customer FICO Minimum</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>