force-app/main/default/objects/Contract/fields/Customer_Money_Transfer_Method__c.field-meta.xml
<CustomField>
    <fullName>Customer_Money_Transfer_Method__c</fullName>
    <inlineHelpText>Does the contract allow for BW to hold project collections or must they go directly to the project?</inlineHelpText>
    <label>Customer Money Transfer Method</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Customer pays Project Co Directly</fullName>
                
                
                    <label>Customer pays Project Co Directly</label>
                
                </value>
            
                <value>
                
                    <fullName>Customer pays BW and BW Remits Monthly</fullName>
                
                
                    <label>Customer pays BW and BW Remits Monthly</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>