force-app/main/default/objects/Contract/fields/Customer_Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>Customer_Payment_Methods__c</fullName>
    <inlineHelpText>Customer Payment Methods Accepted</inlineHelpText>
    <label>Customer Payment Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Paper Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>