force-app/main/default/objects/Contract/fields/Customer_Signature_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signature_Date_Time__c</fullName>
    <description>This is the date the document was generated for project specific contracts that have a parent contract</description>
    <inlineHelpText>This is the date the document was generated for project specific contracts that have a parent contract</inlineHelpText>
    <label>Customer Signature Date/Time</label>
    <type>DateTime</type>
</CustomField>