force-app/main/default/objects/Contract/fields/Date_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Date_Invoiced__c</fullName>
    <inlineHelpText>Primary use case is customer assignment agreements, set by accounting</inlineHelpText>
    <label>Date Invoiced</label>
    <type>Date</type>
</CustomField>