force-app/main/default/objects/Contract/fields/Date_Needed__c.field-meta.xml
<CustomField>
    <fullName>Date_Needed__c</fullName>
    <label>Date Needed</label>
    <type>Date</type>
</CustomField>