force-app/main/default/objects/Contract/fields/Delinquency_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Protocol__c</fullName>
    <label>Delinquency Protocol</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>