force-app/main/default/objects/Contract/fields/Direct_Manager__c.field-meta.xml
<CustomField>
    <fullName>Direct_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup relationship to User</description>
    <label>Direct Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContractsManager</relationshipName>
    <type>Lookup</type>
</CustomField>