force-app/main/default/objects/Contract/fields/Generate_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Generate_Addendum__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Generates Project Specific Addendum for Contract (MA only) and the SMART disclosure form (if it is a SMART contract).</inlineHelpText>
    <label>Generate Addendum and Disclosure</label>
    <type>Checkbox</type>
</CustomField>