force-app/main/default/objects/Contract/fields/Generate_Countersigned_Version__c.field-meta.xml
<CustomField>
    <fullName>Generate_Countersigned_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Generates the Countersigned version of the contract for SSF applicants, and emails it to the customer.</inlineHelpText>
    <label>Generate Countersigned Version</label>
    <type>Checkbox</type>
</CustomField>