force-app/main/default/objects/Contract/fields/Generate_Disclosure_Form__c.field-meta.xml
<CustomField>
    <fullName>Generate_Disclosure_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Disclosure in Contract Package</label>
    <type>Checkbox</type>
</CustomField>