force-app/main/default/objects/Contract/fields/Generate_Review_Version__c.field-meta.xml
<CustomField>
    <fullName>Generate_Review_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is used in SSF to generate the review version of the contract via Conga.</inlineHelpText>
    <label>Generate Review Version</label>
    <type>Checkbox</type>
</CustomField>