force-app/main/default/objects/Contract/fields/Generate_Signed_Version__c.field-meta.xml
<CustomField>
    <fullName>Generate_Signed_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is used in SSF to generate the customer signed version of the contract via Conga.</inlineHelpText>
    <label>Generate Signed Version</label>
    <type>Checkbox</type>
</CustomField>