force-app/main/default/objects/Contract/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <inlineHelpText>Reference Id for Accounting System</inlineHelpText>
    <label>Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>