force-app/main/default/objects/Contract/fields/Link_to_Box_Drive__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Box_Drive__c</fullName>
    <description>This is the link to a Box folder which will store different versions of this contract.</description>
    <inlineHelpText>This is the link to a Box folder which will store different versions of this contract.</inlineHelpText>
    <label>Link to Box Drive</label>
    <type>Url</type>
</CustomField>