force-app/main/default/objects/Contract/fields/Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee__c</fullName>
    <inlineHelpText>Annual management fee ($/MW DC) for Small Offtake customers. Manually entered by CSBD at contract execution. If blended rate, include blended rate in both Anchor and Small Offtake fields.</inlineHelpText>
    <label>XXSmall Offtake Management Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>