force-app/main/default/objects/Contract/fields/Management_Fee_Detail__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Detail__c</fullName>
    <label>XXManagement Fee Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>