force-app/main/default/objects/Contract/fields/Management_Fee_Escalator_Percent__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Escalator_Percent__c</fullName>
    <inlineHelpText>Escalator percentage for management fees. Manually entered by CSBD at contract execution.</inlineHelpText>
    <label>XXManagement Fee Escalator</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>