force-app/main/default/objects/Contract/fields/Management_Fee_Prepayment_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Prepayment_Trigger__c</fullName>
    <label>XXManagement Fee Prepayment Trigger</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>Client_Invoicing_Events</valueSetName>
        
        </valueSet>
</CustomField>